# ai-pipeline-template

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
data/: campaigns.csv
src/: __init__.py  analysis.py  config.py  extract.py  generate.py  load.py  load_sample.py  pipeline.py  transform.py
